msgqueue/kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/msgqueue: "true"
        io.kompose.service: client
    spec:
      containers:
        - args:
            - curl
            - http://elasticsearch:9200
          image: appropriate/curl:latest
          name: client
          resources: {}
      restartPolicy: Always
status: {}
