msgqueue/kubernetes/producer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/msgqueue: "true"
    io.kompose.service: producer
  name: producer
spec:
  containers:
    - image: sjinde/scalable:producer_01
      name: producer
      imagePullPolicy: Never
      resources: {}
  restartPolicy: OnFailure
status: {}
